crates/crucible-cli/src/tui/oil/tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__snapshot_raw_tool_call_complete.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests.rs
expression: render_app_raw(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
[38;2;158;206;106m ✓[0m [38;5;7mRead File[0m[2m(path="README.md")[0m [38;5;8m→ 3 lines[0m                                        
                                                                                
 [38;5;15m◐[0m                                                                              
                                                                                
[38;2;60;64;72m▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄[0m
[48;2;60;64;72m >[0m                                                                              
[38;2;60;64;72m▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀[0m
[1m NORMAL[0m  [38;5;14m...[0m                                                              [38;5;8m— ctx[0m
